about me text update for 2023, nav spacing fix

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -11,7 +11,7 @@
 }
 
 a {
-  margin: 4% 5%;
+  margin: 2% 5%;
   text-decoration: none;
   color: black;
 }
